phodevi: Add memory.temp sensor
phodevi: Fixed k10temp CPU temperature reporting
phodevi: Add IPMI ambient temperature support
phodevi: Some CPU/GPU temperature reporting improvements
phodevi: Ignore reporting 'MS-DOS FAT32' EFI file-system on macOS
phodevi: Add Bcache reporting support
phodevi: Add APFS Apple File-System detection on macOS
phodevi: Tweaks for macOS High Sierra
perf_per_dollar: Add "phoronix-test-suite perf_per_dollar.add <result file>" to allow perf-per-dollar graphs to be added after the fact

Phoronix Test Suite 7.4.0-Tynset
19 September 2017

pts-core: Improve command documentation categories/organization
pts-core: Fix install time reporting from the info sub-command when passing a test profile
pts-core: Add network-info sub-command
pts-core: Java external dependency updates
pts-core: Add maven external dependency
phodevi: NVMe disk reporting on BSDs
pts_Graph: Allow line graphs to have adjustable floor/bottom to better present data on graph

Phoronix Test Suite 7.4.0 Milestone 4
11 September 2017

pts-core: Report on updated OpenBenchmarking.org index update when new/updated tests are introduced
pts-core: Add TEST_EXEC_PREPEND support
pts-core: Ensure XAUTHORITY gets passed if relevant to test execution
pts-core: Fixed dynamic dependency handling on Ubuntu 17.10 / apt-file with newer versions
pts-core: Fix warning about passing variables by ref to PTS modules
pts-core: Add nasm external dependency entries
pts-core: Ensure duplicate dependencies to install don't become present
phodevi: Add basic Budgie desktop reporting
phodevi: IPMI fan speed reporting
phodevi: EPYC detection
toggle_screensaver: improved GNOME screensaver handling
toggle_screensaver: work better under Wayland / non-X environments where display server might not be detected

Phoronix Test Suite 7.4.0 Milestone 3
28 August 2017

pts-core: Reworked test exit status handling
ob_auto_compare: New module for seamless OpenBenchmarking.org result references